--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+.no-gutters{
+  padding: 0 !important
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
